# agent_dingo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi_deploy.yaml
agent_dingo/: __init__.py  agent.py  chat.py  context.py  docgen.py  function_descriptor.py  helpers.py  langchain.py  parser.py  serve.py  usage.py  utils.py  wrapper.py
agent_dingo/agent/: __init__.py  agent.py  chat_context.py  docgen.py  function_descriptor.py  helpers.py  langchain.py  parser.py  registry.py
agent_dingo/core/: blocks.py  message.py  output_parser.py  state.py
agent_dingo/llm/: gemini.py  litellm.py  llama_cpp.py  openai.py
agent_dingo/rag/: base.py  prompt_modifiers.py
agent_dingo/rag/chunkers/: recursive.py
agent_dingo/rag/embedders/: openai.py  sentence_transformer.py
agent_dingo/rag/readers/: list.py  pdf.py  web.py  word.py
agent_dingo/rag/vector_stores/: chromadb.py  qdrant.py
tests/: fake_llm.py  test_agent.py  test_extract_substr.py  test_get_required_args.py  test_parser.py  test_registry.py  test_wrapper.py
tests/test_agent/: test_agent.py  test_extract_substr.py  test_get_required_args.py  test_registry.py
tests/test_core/: test_blocks.py  test_message.py  test_output_parser.py  test_state.py
