[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "openai>=1.6.0,<2.0.0",
  "docstring_parser>=0.15.0,<1.0.0",
  "tenacity>=8.2.0,<9.0.0",
]
name = "agent_dingo"
version = "1.0.0a1"
authors = [
  { name="Oleh Kostromin", email="kostromin97@gmail.com" },
  { name="Iryna Kondrashchenko", email="iryna230520@gmail.com" },
]
description = "A microframework for creating simple AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
server = ["fastapi>=0.105.0,<1.0.0", "uvicorn>=0.20.0,<1.0.0"]
langchain = ["langchain>=0.1.0,<0.2.0"]